[gd_scene load_steps=4 format=3 uid="uid://ch8y8tsjsunij"]

[ext_resource type="PackedScene" uid="uid://dmiaekpq8rmha" path="res://Scenes/MenuScenes/AssetScenes/CustomButton.tscn" id="1_k0fea"]
[ext_resource type="Script" path="res://Scripts/MenuScripts/SessionManager.gd" id="1_thaf7"]
[ext_resource type="Texture2D" uid="uid://bwimom06a2td8" path="res://Assets/Menu/CustomButton/whiteSquare.png" id="2_ssa1t"]

[node name="CreateSessionMenu" type="Control"]
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_thaf7")

[node name="GeneralVBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -848.0
offset_top = 78.0
offset_right = 833.0
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 90

[node name="HBoxContainer2" type="HBoxContainer" parent="GeneralVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 500

[node name="MenuName" type="Label" parent="GeneralVBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 90
text = "CREATE_SESSION_BUTTON"

[node name="ErrorLabel" type="Label" parent="GeneralVBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GeneralVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 55

[node name="TeamsHBox" type="HBoxContainer" parent="GeneralVBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 600

[node name="TeamsLabel" type="Label" parent="GeneralVBoxContainer/VBoxContainer/TeamsHBox"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "TEAMS"

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="GeneralVBoxContainer/VBoxContainer/TeamsHBox"]
layout_mode = 2
theme_override_constants/separation = 75

[node name="YesButton" parent="GeneralVBoxContainer/VBoxContainer/TeamsHBox/ButtonsHBoxContainer" instance=ExtResource("1_k0fea")]
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "YES"
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/VBoxContainer/TeamsHBox/ButtonsHBoxContainer/YesButton"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(367, 60)
scale = Vector2(4.59333, 1.12667)
texture = ExtResource("2_ssa1t")

[node name="NoButton" parent="GeneralVBoxContainer/VBoxContainer/TeamsHBox/ButtonsHBoxContainer" instance=ExtResource("1_k0fea")]
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "NO"

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/VBoxContainer/TeamsHBox/ButtonsHBoxContainer/NoButton"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(367, 60)
scale = Vector2(4.59333, 1.12667)
texture = ExtResource("2_ssa1t")

[node name="PlayersHBox" type="HBoxContainer" parent="GeneralVBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 800

[node name="PlayersLabel" type="Label" parent="GeneralVBoxContainer/VBoxContainer/PlayersHBox"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "PLAYERS"

[node name="OptionButton" type="OptionButton" parent="GeneralVBoxContainer/VBoxContainer/PlayersHBox"]
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
flat = true
alignment = 1
item_count = 1
popup/item_0/text = "2 players"
popup/item_0/id = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/VBoxContainer/PlayersHBox/OptionButton"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(446.625, 60)
scale = Vector2(5.30111, 1.12667)
texture = ExtResource("2_ssa1t")

[node name="GamePrivateHBox" type="HBoxContainer" parent="GeneralVBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 400

[node name="GameTypeLabel" type="Label" parent="GeneralVBoxContainer/VBoxContainer/GamePrivateHBox"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "GAME_TYPE"

[node name="ButtonsHBoxContainer" type="HBoxContainer" parent="GeneralVBoxContainer/VBoxContainer/GamePrivateHBox"]
layout_mode = 2
theme_override_constants/separation = 75

[node name="PublicButton" parent="GeneralVBoxContainer/VBoxContainer/GamePrivateHBox/ButtonsHBoxContainer" instance=ExtResource("1_k0fea")]
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "PUBLIC"
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/VBoxContainer/GamePrivateHBox/ButtonsHBoxContainer/PublicButton"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(367, 60)
scale = Vector2(4.59333, 1.12667)
texture = ExtResource("2_ssa1t")

[node name="PrivateButton" parent="GeneralVBoxContainer/VBoxContainer/GamePrivateHBox/ButtonsHBoxContainer" instance=ExtResource("1_k0fea")]
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "PRIVATE"
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/VBoxContainer/GamePrivateHBox/ButtonsHBoxContainer/PrivateButton"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(367, 60)
scale = Vector2(4.59333, 1.12667)
texture = ExtResource("2_ssa1t")

[node name="MapHBox" type="HBoxContainer" parent="GeneralVBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 650

[node name="MapNameLabel" type="Label" parent="GeneralVBoxContainer/VBoxContainer/MapHBox"]
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "MAP"

[node name="MapOptionButton" type="OptionButton" parent="GeneralVBoxContainer/VBoxContainer/MapHBox"]
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
flat = true
alignment = 1
item_count = 1
popup/item_0/text = "2 players"
popup/item_0/id = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/VBoxContainer/MapHBox/MapOptionButton"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(446.625, 60)
scale = Vector2(5.30111, 1.12667)
texture = ExtResource("2_ssa1t")

[node name="HBoxContainer" type="HBoxContainer" parent="GeneralVBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 130

[node name="Node3" type="Control" parent="GeneralVBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Node2" type="Control" parent="GeneralVBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Node" type="Control" parent="GeneralVBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Create" parent="GeneralVBoxContainer/HBoxContainer" instance=ExtResource("1_k0fea")]
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "CREATE_SESSION_BUTTON"
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/HBoxContainer/Create"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(446.625, 60)
scale = Vector2(5.30111, 1.12667)
texture = ExtResource("2_ssa1t")

[node name="FindGameVBox" type="VBoxContainer" parent="GeneralVBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Find" parent="GeneralVBoxContainer/HBoxContainer/FindGameVBox" instance=ExtResource("1_k0fea")]
visible = false
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "      Find Game      "
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/HBoxContainer/FindGameVBox/Find"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(446.625, 60)
scale = Vector2(5.30111, 1.12667)
texture = ExtResource("2_ssa1t")

[node name="FindByCode" parent="GeneralVBoxContainer/HBoxContainer/FindGameVBox" instance=ExtResource("1_k0fea")]
visible = false
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "Find Game by code "
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/HBoxContainer/FindGameVBox/FindByCode"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(446.625, 60)
scale = Vector2(5.30111, 1.12667)
texture = ExtResource("2_ssa1t")

[node name="ReturnButton" parent="GeneralVBoxContainer/HBoxContainer" instance=ExtResource("1_k0fea")]
clip_contents = true
layout_mode = 2
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 70
text = "RETURN"
alignment = 0

[node name="Sprite2D" type="Sprite2D" parent="GeneralVBoxContainer/HBoxContainer/ReturnButton"]
modulate = Color(0.862745, 0.698039, 1, 1)
z_index = -1
position = Vector2(367, 60)
scale = Vector2(4.59333, 1.12667)
texture = ExtResource("2_ssa1t")

[node name="SessionCode" type="LineEdit" parent="."]
visible = false
layout_mode = 0
offset_left = 811.0
offset_top = 575.0
offset_right = 1433.0
offset_bottom = 710.0

[connection signal="pressed" from="GeneralVBoxContainer/VBoxContainer/TeamsHBox/ButtonsHBoxContainer/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="GeneralVBoxContainer/VBoxContainer/TeamsHBox/ButtonsHBoxContainer/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="item_selected" from="GeneralVBoxContainer/VBoxContainer/PlayersHBox/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="GeneralVBoxContainer/VBoxContainer/GamePrivateHBox/ButtonsHBoxContainer/PublicButton" to="." method="_on_public_button_pressed"]
[connection signal="pressed" from="GeneralVBoxContainer/VBoxContainer/GamePrivateHBox/ButtonsHBoxContainer/PrivateButton" to="." method="_on_private_button_pressed"]
[connection signal="item_selected" from="GeneralVBoxContainer/VBoxContainer/MapHBox/MapOptionButton" to="." method="_on_map_option_button_item_selected"]
[connection signal="pressed" from="GeneralVBoxContainer/HBoxContainer/Create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="GeneralVBoxContainer/HBoxContainer/FindGameVBox/Find" to="." method="_on_find_pressed"]
[connection signal="pressed" from="GeneralVBoxContainer/HBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="text_submitted" from="SessionCode" to="." method="_on_session_code_text_submitted"]
